--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script type="text/javascript" defer src="./jquery.js"></script>
+  <script type="text/javascript" defer src="jquery.js"></script>
   <script defer>
     window.$ = $;
   </script>
