--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script type="text/javascript" defer src="%PUBLIC_URL%/jquery.js"></script>
-  <script defer>
+  <script type="text/javascript" src="%PUBLIC_URL%/jquery.js"></script>
+  <script >
     window.$ = $;
   </script>
-  <script  defer src="%PUBLIC_URL%/owl_carousel/owl.carousel.min.js"></script>
+  <script src="%PUBLIC_URL%/owl_carousel/owl.carousel.min.js"></script>
 </html>
